make generate-sdk
