# src/main/java/com/basistheory/UpdateTenantMemberRequest.java
@@ -23,7 +23,6 @@ import com.google.gson.stream.JsonWriter;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
-import org.openapitools.jackson.nullable.JsonNullable;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
@@ -47,45 +46,18 @@ import java.util.Set;
 import com.basistheory.JSON;
 
 /**
- * CreateTenantInvitationRequest
+ * UpdateTenantMemberRequest
  */
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
-public class CreateTenantInvitationRequest {
-  public static final String SERIALIZED_NAME_EMAIL = "email";
-  @SerializedName(SERIALIZED_NAME_EMAIL)
-  private String email;
-
+public class UpdateTenantMemberRequest {
   public static final String SERIALIZED_NAME_ROLE = "role";
   @SerializedName(SERIALIZED_NAME_ROLE)
   private String role;
 
-  public CreateTenantInvitationRequest() {
+  public UpdateTenantMemberRequest() {
   }
 
-  public CreateTenantInvitationRequest email(String email) {
-    
-    this.email = email;
-    return this;
-  }
-
-   /**
-   * Get email
-   * @return email
-  **/
-  @javax.annotation.Nonnull
-  @ApiModelProperty(required = true, value = "")
-
-  public String getEmail() {
-    return email;
-  }
-
-
-  public void setEmail(String email) {
-    this.email = email;
-  }
-
-
-  public CreateTenantInvitationRequest role(String role) {
+  public UpdateTenantMemberRequest role(String role) {
     
     this.role = role;
     return this;
@@ -95,8 +67,8 @@ public class CreateTenantInvitationRequest {
    * Get role
    * @return role
   **/
-  @javax.annotation.Nullable
-  @ApiModelProperty(value = "")
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
 
   public String getRole() {
     return role;
@@ -117,32 +89,19 @@ public class CreateTenantInvitationRequest {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    CreateTenantInvitationRequest createTenantInvitationRequest = (CreateTenantInvitationRequest) o;
-    return Objects.equals(this.email, createTenantInvitationRequest.email) &&
-        Objects.equals(this.role, createTenantInvitationRequest.role);
-  }
-
-  private static <T> boolean equalsNullable(JsonNullable<T> a, JsonNullable<T> b) {
-    return a == b || (a != null && b != null && a.isPresent() && b.isPresent() && Objects.deepEquals(a.get(), b.get()));
+    UpdateTenantMemberRequest updateTenantMemberRequest = (UpdateTenantMemberRequest) o;
+    return Objects.equals(this.role, updateTenantMemberRequest.role);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(email, role);
-  }
-
-  private static <T> int hashCodeNullable(JsonNullable<T> a) {
-    if (a == null) {
-      return 1;
-    }
-    return a.isPresent() ? Arrays.deepHashCode(new Object[]{a.get()}) : 31;
+    return Objects.hash(role);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class CreateTenantInvitationRequest {\n");
-    sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("class UpdateTenantMemberRequest {\n");
     sb.append("    role: ").append(toIndentedString(role)).append("\n");
     sb.append("}");
     return sb.toString();
@@ -166,37 +125,33 @@ public class CreateTenantInvitationRequest {
   static {
     // a set of all properties/fields (JSON key names)
     openapiFields = new HashSet<String>();
-    openapiFields.add("email");
     openapiFields.add("role");
 
     // a set of required properties/fields (JSON key names)
     openapiRequiredFields = new HashSet<String>();
-    openapiRequiredFields.add("email");
+    openapiRequiredFields.add("role");
   }
 
  /**
   * Validates the JSON Object and throws an exception if issues found
   *
   * @param jsonObj JSON Object
-  * @throws IOException if the JSON Object is invalid with respect to CreateTenantInvitationRequest
+  * @throws IOException if the JSON Object is invalid with respect to UpdateTenantMemberRequest
   */
   public static void validateJsonObject(JsonObject jsonObj) throws IOException {
       if (jsonObj == null) {
-        if (!CreateTenantInvitationRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in CreateTenantInvitationRequest is not found in the empty JSON string", CreateTenantInvitationRequest.openapiRequiredFields.toString()));
+        if (!UpdateTenantMemberRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in UpdateTenantMemberRequest is not found in the empty JSON string", UpdateTenantMemberRequest.openapiRequiredFields.toString()));
         }
       }
 
       // check to make sure all required properties/fields are present in the JSON string
-      for (String requiredField : CreateTenantInvitationRequest.openapiRequiredFields) {
+      for (String requiredField : UpdateTenantMemberRequest.openapiRequiredFields) {
         if (jsonObj.get(requiredField) == null) {
           throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
         }
       }
-      if (!jsonObj.get("email").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `email` to be a primitive type in the JSON string but got `%s`", jsonObj.get("email").toString()));
-      }
-      if ((jsonObj.get("role") != null && !jsonObj.get("role").isJsonNull()) && !jsonObj.get("role").isJsonPrimitive()) {
+      if (!jsonObj.get("role").isJsonPrimitive()) {
         throw new IllegalArgumentException(String.format("Expected the field `role` to be a primitive type in the JSON string but got `%s`", jsonObj.get("role").toString()));
       }
   }
@@ -205,22 +160,22 @@ public class CreateTenantInvitationRequest {
     @SuppressWarnings("unchecked")
     @Override
     public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
-       if (!CreateTenantInvitationRequest.class.isAssignableFrom(type.getRawType())) {
-         return null; // this class only serializes 'CreateTenantInvitationRequest' and its subtypes
+       if (!UpdateTenantMemberRequest.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'UpdateTenantMemberRequest' and its subtypes
        }
        final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
-       final TypeAdapter<CreateTenantInvitationRequest> thisAdapter
-                        = gson.getDelegateAdapter(this, TypeToken.get(CreateTenantInvitationRequest.class));
+       final TypeAdapter<UpdateTenantMemberRequest> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(UpdateTenantMemberRequest.class));
 
-       return (TypeAdapter<T>) new TypeAdapter<CreateTenantInvitationRequest>() {
+       return (TypeAdapter<T>) new TypeAdapter<UpdateTenantMemberRequest>() {
            @Override
-           public void write(JsonWriter out, CreateTenantInvitationRequest value) throws IOException {
+           public void write(JsonWriter out, UpdateTenantMemberRequest value) throws IOException {
              JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
              elementAdapter.write(out, obj);
            }
 
            @Override
-           public CreateTenantInvitationRequest read(JsonReader in) throws IOException {
+           public UpdateTenantMemberRequest read(JsonReader in) throws IOException {
              JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
              validateJsonObject(jsonObj);
              return thisAdapter.fromJsonTree(jsonObj);
@@ -231,18 +186,18 @@ public class CreateTenantInvitationRequest {
   }
 
  /**
-  * Create an instance of CreateTenantInvitationRequest given an JSON string
+  * Create an instance of UpdateTenantMemberRequest given an JSON string
   *
   * @param jsonString JSON string
-  * @return An instance of CreateTenantInvitationRequest
-  * @throws IOException if the JSON string is invalid with respect to CreateTenantInvitationRequest
+  * @return An instance of UpdateTenantMemberRequest
+  * @throws IOException if the JSON string is invalid with respect to UpdateTenantMemberRequest
   */
-  public static CreateTenantInvitationRequest fromJson(String jsonString) throws IOException {
-    return JSON.getGson().fromJson(jsonString, CreateTenantInvitationRequest.class);
+  public static UpdateTenantMemberRequest fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, UpdateTenantMemberRequest.class);
   }
 
  /**
-  * Convert an instance of CreateTenantInvitationRequest to an JSON string
+  * Convert an instance of UpdateTenantMemberRequest to an JSON string
   *
   * @return JSON string
   */
